load("//tools:defaults.bzl", "ng_module", "sass_binary")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "primitives",
    srcs = glob(["**/*.ts"]),
    assets = [
        "primitives-demo.html",
        ":primitives_demo_scss",
    ],
    deps = [
        "//src/cdk/a11y",
    ],
)

sass_binary(
    name = "primitives_demo_scss",
    src = "primitives-demo.scss",
)
